# PhANNs3

./: .gitignore  .pre-commit-config.yaml  README.md  README_GETTING_STARTED.md  requirements.txt
phanns/: .gitignore  README.md  pyproject.toml  setup.py
phanns/src/: phanns.py
phanns/src/tools/: confusion_matrix_from_output.py  model.py  predict.py  store_pretrained.py  train_custom_model.py
phanns/src/utils/: calc.pyx  calc_arrays.py  count.pyx  count_substrings.py  data_handler.py  gaussian_confidence.py  stored_models.py
phanns/utils/: calc.pyx  data_handler.py  stored_models.py
